test/negative/parse_missing_in_for.mut
# Negative: missing 'in' keyword in for loop
for i:i64 range(10)
    print(i)
end
